--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       background: linear-gradient(to right, #fefefe, #e3f2fd);
       color: #333;
     }
-
     header {
       background-color: #1976d2;
       color: white;
@@ -23,18 +22,15 @@
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
     }
-
     header h1 {
       margin: 0;
       font-size: 2em;
     }
-
     .container {
       padding: 30px 20px;
       max-width: 900px;
       margin: auto;
     }
-
     .section {
       background-color: #fff;
       padding: 25px;
@@ -43,36 +39,29 @@
       box-shadow: 0 8px 16px rgba(0,0,0,0.05);
       transition: transform 0.2s ease;
     }
-
     .section:hover {
       transform: translateY(-4px);
     }
-
     h2, h3 {
       color: #1976d2;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 15px;
     }
-
     th, td {
       border: 1px solid #ccc;
       padding: 12px;
       text-align: left;
     }
-
     th {
       background-color: #e3f2fd;
       font-weight: 600;
     }
-
     td {
       background-color: #fdfdfd;
     }
-
     code {
       background: #e0f7fa;
       padding: 4px 8px;
@@ -80,7 +69,6 @@
       display: inline-block;
       margin: 8px 0;
     }
-
     .dialog {
       background: #f1f8ff;
       padding: 15px;
@@ -88,17 +76,9 @@
       margin-bottom: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
-
     .dialog div {
       margin-bottom: 5px;
     }
-
-    img {
-      max-width: 100%;
-      margin-top: 15px;
-      border-radius: 10px;
-    }
-
     a {
       display: inline-block;
       margin-top: 10px;
@@ -109,20 +89,16 @@
       border-radius: 6px;
       transition: background-color 0.3s ease;
     }
-
     a:hover {
       background-color: #42a5f5;
     }
-
     @media screen and (max-width: 600px) {
       .section {
         padding: 20px;
       }
-
       table, th, td {
         font-size: 14px;
       }
-
       code {
         font-size: 14px;
       }
@@ -131,47 +107,51 @@
 </head>
 <body>
 
-  <header>
-    <h1>Partikel Kesopanan dalam Bahasa Thai</h1>
-    <p><strong>Tujuan:</strong> Memahami penggunaan partikel kesopanan & penggunaannya dalam konteks formal dan informal.</p>
-  </header>
+<header>
+  <h1>Partikel Kesopanan dalam Bahasa Thai</h1>
+  <p><strong>Tujuan:</strong> Memahami penggunaan partikel kesopanan & penggunaannya dalam konteks formal dan informal.</p>
+</header>
 
-  <div class="container">
-    <div class="section">
-      <h2>Pengantar</h2>
-      <p>Dalam bahasa Thai, kesopanan sangat penting. Salah satu cara menunjukkan sopan santun adalah dengan menggunakan <strong>partikel kesopanan</strong> yang ditempatkan di akhir kalimat. Meskipun tidak memiliki arti khusus, partikel ini mencerminkan penghargaan terhadap lawan bicara dan norma budaya Thailand.</p>
-    </div>
+<div class="container">
+  <div class="section">
+    <h2>Apa Itu Partikel Kesopanan dan Fungsinya</h2>
+    <p>Dalam bahasa Thai, kesopanan sangat penting. Salah satu cara menunjukkan sopan santun adalah dengan menggunakan <strong>partikel kesopanan</strong> yang ditempatkan di akhir kalimat. Partikel ini tidak memiliki arti leksikal, namun menunjukkan penghargaan terhadap lawan bicara.</p>
+  </div>
 
-    <div class="section">
-      <h2>Jenis Partikel</h2>
-      <table>
-        <tr><th>Partikel</th><th>Digunakan oleh</th><th>Konteks</th></tr>
-        <tr><td>ครับ (khrap)</td><td>Laki-laki</td><td>Pernyataan & pertanyaan sopan</td></tr>
-        <tr><td>ค่ะ (kha)</td><td>Perempuan</td><td>Pernyataan</td></tr>
-        <tr><td>คะ (kha)</td><td>Perempuan</td><td>Pertanyaan</td></tr>
-      </table>
-      <p>Contoh penggunaan:</p>
-      <code>สวัสดีครับ</code> - Sawatdee khrap (Halo - oleh pria)<br>
-      <code>ขอบคุณค่ะ</code> - Khopun kha (Terima kasih - oleh wanita)<br>
-      <code>คุณชื่ออะไรคะ?</code> - Khun chue arai kha (Siapa nama Anda? - oleh wanita)
-    </div>
+  <div class="section">
+    <h2>Jenis Partikel</h2>
+    <table>
+      <tr><th>Partikel</th><th>Digunakan oleh</th><th>Konteks</th></tr>
+      <tr><td>ครับ (khráp)</td><td>Laki-laki</td><td>Pernyataan & pertanyaan sopan</td></tr>
+      <tr><td>ค่ะ (khâ)</td><td>Perempuan</td><td>Pernyataan</td></tr>
+      <tr><td>คะ (khá)</td><td>Perempuan</td><td>Pertanyaan</td></tr>
+    </table>
+    <p>Contoh penggunaan:</p>
+    <code>สวัสดีครับ</code> – sà-wàt-dii khráp (Halo - pria)<br>
+    <code>ขอบคุณค่ะ</code> – khàawp-khun khâ (Terima kasih - wanita)<br>
+    <code>คุณชื่ออะไรคะ?</code> – khun chûue à-rai khá (Siapa nama Anda? - wanita)
+  </div>
 
-    <div class="section">
-      <h2>Contoh Percakapan</h2>
-      note : A sebagai laki-laki, dan B sebagai perempuan
-      <div class="dialog">
-        <div><strong>A:</strong> สวัสดีครับ (Sawatdee khrap) <br>haloo <br></div>
-        <div><strong>B:</strong> สวัสดีค่ะ (Sawatdee kha) <br>haloo <br></div>
-        <div><strong>A:</strong> คุณชื่ออะไรครับ? (Khun chue arai khrap?) <br>Nama kamu siapa? <br></div>
-        <div><strong>B:</strong> ฉันชื่อมินค่ะ (chan chue Min kha) <br>Nama aku Min <br></div>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Kesimpulan</h2>
-      <p>Penggunaan partikel kesopanan seperti <em>khrap</em> dan <em>kha</em> sangat penting dalam bahasa Thai. Penggunaannya mencerminkan rasa hormat dan kepatuhan terhadap budaya Thailand. Meski terdengar sepele, kesalahan dalam penggunaannya bisa membuat komunikasi menjadi kurang sopan.</p>
+  <div class="section">
+    <h2>Contoh Percakapan</h2>
+    <p><em>Catatan: A adalah laki-laki, B adalah perempuan.</em></p>
+    <div class="dialog">
+      <div><strong>A:</strong> สวัสดีครับ (sà-wàt-dii khráp) – Halo</div>
+      <div><strong>B:</strong> สวัสดีค่ะ (sà-wàt-dii khâ) – Halo</div>
+      <div><strong>A:</strong> คุณชื่ออะไรครับ? (khun chûue à-rai khráp?) – Siapa nama kamu?</div>
+      <div><strong>B:</strong> ฉันชื่อมินค่ะ (chǎn chûue Min khâ) – Namaku Min</div>
     </div>
   </div>
+
+  <div class="section">
+    <h2>Catatan Penting</h2>
+    <ul>
+      <li>Penggunaan partikel kesopanan sangat umum dalam komunikasi sehari-hari di Thailand.</li>
+      <li>Meski bersifat opsional dalam situasi santai, penggunaannya sangat dianjurkan dalam konteks formal atau saat berbicara dengan orang yang lebih tua atau tidak dikenal.</li>
+      <li>Pengucapan nada dalam bahasa Thai sangat menentukan arti, sehingga penting untuk mempelajarinya secara benar.</li>
+    </ul>
+  </div>
+</div>
 
 </body>
 </html>
